--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </p>
                     <ul class="service__features">
                         <li>Sistemas de monitoramento personalizados</li>
-                        <li>ThingsBoard & Node-RED</li>
+                        <li>ThingsBoard </li>
                         <li>Coleta e processamento de dados IoT</li>
                         <li>Dashboards em tempo real</li>
                         <li>Alertas e relatórios automáticos</li>
