--- a/index.html
+++ b/index.html
@@ -35,26 +35,21 @@
     <section id="home" class="hero section">
         <div class="container">
             <div class="hero__content">
-                <h1 class="hero__title">
-                    Vitor Gabriel
-                    <span class="hero__subtitle">Desenvolvedor FullStack FullCycle</span>
-                </h1>
+                    <div class="hero__brand-text">
+                        <h1 class="hero__title">ZENKAI</h1>
+                        <span class="hero__subtitle">Resiliência e Continuidade de Negócios</span>
+                    </div>
                 <p class="hero__description">
-                    Especialista em soluções inteligentes para energia renovável e indústria 4.0
+                    Sistemas mais fortes após qualquer desafio.<br>
+                    Garanta a continuidade do seu negócio.
                 </p>
                 <div class="hero__buttons">
-                    <a href="#portfolio" class="btn btn--primary">Ver Projetos</a>
-                    <a href="#contact" class="btn btn--secondary">Iniciar Projeto</a>
+                    <a href="#services" class="btn btn--primary">Serviços Prestados</a>
+                    <a href="#contact" class="btn btn--secondary">Solicitar Consultoria</a>
                 </div>
             </div>
             <div class="hero__background">
                 <div class="hero__tech-icons">
-                    <span>Python</span>
-                    <span>Vue.js</span>
-                    <span>Spring Boot</span>
-                    <span>ThingsBoard</span>
-                    <span>Docker</span>
-                    <span>Node-RED</span>
                 </div>
             </div>
         </div>
