--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav__brand">
-                <h2>Vitor Gabriel</h2>
-                <span>Zenkai - 62.152.425/0001-73</span>
+                <div class="logo">
+                    <img src="Assets/Logo Recortada.png" alt="Logo Vitor Gabriel">
+                </div>
+                <div>
+                    <h2>Vitor Gabriel</h2>
+                    <span>Zenkai - 62.152.425/0001-73</span>
+                </div>
             </div>
             
             <ul class="nav__menu">
