--- a/index.html
+++ b/index.html
@@ -660,6 +660,12 @@
                                 <input type="email" id="email" name="email" placeholder="seu@email.com" required>
                             </div>
                         </div>
+
+                        <!-- Adicione este campo para telefone -->
+                        <div class="form__group">
+                            <label for="phone">Telefone *</label>
+                            <input type="tel" id="phone" name="phone" placeholder="Seu telefone" required>
+                        </div>
                         
                         <div class="form__group">
                             <label for="service">Tipo de serviço *</label>
@@ -690,6 +696,7 @@
                             <p class="form__note">* Campos obrigatórios. Seus dados estão seguros conosco.</p>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
