--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitor Gabriel - Desenvolvedor FullStack | Zenkai</title>
+    <title>Zenkai</title>
+    <link rel="icon" type="image/png" href="Assets/Logo Padrão.png">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
